# SeaBattle

./: CMakeLists.txt  KukarachaBattle  KukarachaBattle.pro  Makefile  README.md  ui_mainwindow.h
Headers/: User.h  abstractData.h  mainwindow.h
Headers/GameLogic/: GameTypes.h
KClient/KukarachaBattle/: KukarachaBattle.pro  Makefile  mainwindow.ui  moc_FightButton.cpp  moc_Game.cpp  moc_GameUI.cpp  moc_GameWidget.cpp  moc_OceanServer.cpp  moc_SeaBattleClient.cpp  moc_ShipsPlanningUI.cpp  moc_mainwindow.cpp
KClient/KukarachaBattle/Headers/: FightButton.h  GameUI.h  ShipsPlanningUI.h  abstractData.h
KClient/KukarachaBattle/Headers/GameLogic/: GameBoard.h  GameLogic.h  GameWidget.h
KClient/KukarachaBattle/Sources/: Connect_PG.cpp  FightButton.cpp  GameUI.cpp  Game_PG.cpp  Lobby_PG.cpp  LoginAuth_PG.cpp  Menu_PG.cpp  Select_PG.cpp  ShipsPlanningUI.cpp  main.cpp  mainwindow.cpp
KClient/KukarachaBattle/Sources/GameLogic/: GameLogic.cpp  GameWidget.cpp
KServer/Server/: Makefile  MessageBase.txt  Server  Server.pro  UserBase.txt  moc_GameWidget.cpp  moc_Server.cpp  moc_TcpSocket.cpp
KServer/Server/Headers/: DataBase.h  Server.h  TcpSocket.h  User.h
KServer/Server/Headers/GameLogic/: GameTypes.h
KServer/Server/Sources/: DataBase.cpp  Server.cpp  TcpSocket.cpp  slotReadyRead.cpp
SeaRaider/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h
Sources/: Connect_PG.cpp  Lobby_PG.cpp  LoginAuth_PG.cpp  Menu_PG.cpp  mainwindow.cpp  onReadyRead.cpp
Sources/GameLogic/: GameBoard.cpp
client/: CMakeLists.txt
client/src/: GameBoard.cpp  GameBoard.h  GameLogic.cpp  GameLogic.h  GameWidget.cpp  GameWidget.h  SeaBattleClient.cpp  SeaBattleClient.h  demo_main.cpp  main.cpp
server/: CMakeLists.txt
server/src/: OceanServer.cpp  OceanServer.h  main.cpp
